# ChangeLog for sys-fs/udev
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.946 2013/08/08 10:59:54 ssuominen Exp $

  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> udev-206-r1.ebuild,
  udev-9999.ebuild:
  Enable USE="hwdb" by default to match upstream behavior.

*udev-206-r1 (07 Aug 2013)

  07 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> +udev-206-r1.ebuild,
  udev-9999.ebuild:
  Initial multilib-minimal.eclass conversion (to build libudev.so.1)

  30 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-204.ebuild,
  udev-206.ebuild, udev-9999.ebuild:
  Update udev guide link to the wiki page.

  26 Jul 2013; Tim Harder <radhermit@gentoo.org> Manifest:
  Fix manifest (bug #478266).

  26 Jul 2013; Samuli Suominen <ssuominen@gentoo.org>
  -files/80-net-name-slot.rules, -udev-197-r8.ebuild, -udev-200.ebuild,
  -udev-205.ebuild:
  old

  26 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-204.ebuild:
  m68k stable wrt #470580

  25 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-206.ebuild,
  udev-9999.ebuild:
  Move building of mans behind ifdef in src_compile() as reported by hwoarang

  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-206.ebuild,
  udev-9999.ebuild:
  Force at least sys-apps/kmod >= 14-r1 to be OpenRC compatible with the
  static-nodes init script.

*udev-206 (23 Jul 2013)

  23 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-204.ebuild,
  +udev-206.ebuild, udev-9999.ebuild:
  Version bump. Stop defining bash-completion directory and let the build-sys
  read it from bash-completion.pc pkg-config file.

  17 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> udev-205.ebuild,
  udev-9999.ebuild:
  Pull in app-text/docbook-xml-dtd:4.2 for generation of udev(7), udevadm(8)
  and systemd-udevd(8) manpages. Move libxslt and docbook(s) behind 9999 "if" and
  "else" block again thanks to upstream shipping manpages in tarballs again wrt