@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.946 2013/08/08 10:59:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.947 2013/08/08 11:02:38 ssuominen Exp $
+
+  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> udev-206-r1.ebuild,
+  udev-9999.ebuild:
+  Remove use of preserve_old_lib because FEATURES="preserved-libs" is now
+  enabled by default in stable sys-apps/portage.
 
   08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> udev-206-r1.ebuild,
   udev-9999.ebuild:
